feature/VGCA-26 Перевести репозиторий на JPA