@@ -7,17 +7,16 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Import;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import ru.vinogradiya.models.dto.ProductCreateDto;
-import ru.vinogradiya.models.dto.ProductItemFilter;
+import ru.vinogradiya.models.dto.ProductFilter;
 import ru.vinogradiya.models.entity.Product;
 import ru.vinogradiya.models.entity.Product_;
 import ru.vinogradiya.models.entity.Selection;
 import ru.vinogradiya.utils.JpaRepositoryBasedTest;
-import ru.vinogradiya.utils.common.Paged;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -28,13 +27,15 @@ import java.util.UUID;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static ru.vinogradiya.queries.product.ProductSpecificationBuilder.buildSpecificationFrom;
 
-@Import({ProductsRepositoryImpl.class})
 public class ProductsRepositoryTest extends JpaRepositoryBasedTest {
 
     private static final UUID ID = UUID.randomUUID();
-    private static final String NAME = "Алиса";
+    private static final String NAME_KUZMICH = "Кузьмич";
+    private static final String NAME_ALISA = "Алиса";
 
     private static final Sort SORT = Sort.by(Product_.PRICE_SEED).ascending()
             .and(Sort.by(Product_.NAME).ascending());
@@ -54,7 +55,7 @@ public class ProductsRepositoryTest extends JpaRepositoryBasedTest {
                     "36х28 мм 15-20г. розовая",
                     "Мясисто-сочная с мускатным ароматом, оч. сладкая",
                     -23,
-                    600,
+                    450,
                     300,
                     "basanti.webp",
                     null,
@@ -86,14 +87,14 @@ public class ProductsRepositoryTest extends JpaRepositoryBasedTest {
                     selections.get(0)),
             new Product(
                     UUID.randomUUID(),
-                    NAME,
+                    NAME_KUZMICH,
                     "Оч. ранний",
                     "Сильно-рослый",
                     "Крупная 500-1200г.",
                     "36х28 мм 15-20г. розовая",
                     "Мясисто-сочная с мускатным ароматом, оч. сладкая",
                     -23,
-                    500,
+                    400,
                     300,
                     "basanti.webp",
                     null,
@@ -102,7 +103,27 @@ public class ProductsRepositoryTest extends JpaRepositoryBasedTest {
                     0,
                     0,
                     2,
-                    selections.get(0))
+                    selections.get(0)),
+            new Product(
+                    UUID.randomUUID(),
+                    NAME_ALISA,
+                    "Средний",
+                    "Сильнорослый",
+                    "800-1300г.",
+                    "6-9 красная",
+                    "Гармоничный мясисто-сочный",
+                    -23,
+                    700,
+                    400,
+                    null,
+                    null,
+                    "США",
+                    1,
+                    1,
+                    1,
+                    1,
+                    null
+            )
     );
 
     @PersistenceContext
@@ -123,14 +144,14 @@ public class ProductsRepositoryTest extends JpaRepositoryBasedTest {
     void testFindAll_shouldReturnProductWithFilter() {
 
         // given
-        ProductItemFilter filter = ProductItemFilter.builder()
+        ProductFilter filter = ProductFilter.builder()
                 .selections(List.of(
                         selections.get(1).getName()
                 ))
                 .build();
 
         // when
-        Paged<Product> result = repository.findAll(filter, Pageable.unpaged());
+        Page<Product> result = repository.findAll(buildSpecificationFrom(null, filter), Pageable.unpaged());
 
         // then
         Assertions.assertAll(
@@ -145,14 +166,15 @@ public class ProductsRepositoryTest extends JpaRepositoryBasedTest {
 
         // given
         Pageable page = PageRequest.of(0, 2, SORT);
+        ProductFilter filter = ProductFilter.builder().build();
 
         // when
-        Paged<Product> result = repository.findAll(null, page);
+        Page<Product> result = repository.findAll(buildSpecificationFrom(null, filter), page);
 
         // then
         Assertions.assertAll(
-                () -> assertEquals(products.get(2), result.getContent().get(0)),
-                () -> assertEquals(products.get(1), result.getContent().get(1)),
+                () -> assertEquals(NAME_KUZMICH, result.getContent().get(0).getName()),
+                () -> assertEquals(products.get(0), result.getContent().get(1)),
                 () -> assertEquals(2, result.getContent().size())
         );
     }
@@ -163,14 +185,15 @@ public class ProductsRepositoryTest extends JpaRepositoryBasedTest {
 
         // given
         Pageable page = PageRequest.of(1, 2, SORT);
+        ProductFilter filter = ProductFilter.builder().build();
 
         // when
-        Paged<Product> result = repository.findAll(null, page);
+        Page<Product> result = repository.findAll(buildSpecificationFrom(null, filter), page);
 
         // then
         Assertions.assertAll(
-                () -> assertEquals(products.get(0), result.getContent().get(0)),
-                () -> assertEquals(1, result.getContent().size())
+                () -> assertEquals(2, result.getContent().size()),
+                () -> assertEquals(NAME_ALISA, result.getContent().get(1).getName())
         );
     }
 
@@ -193,12 +216,30 @@ public class ProductsRepositoryTest extends JpaRepositoryBasedTest {
     void testFindByName_shouldReturnProducts() {
 
         // when
-        Optional<Product> result = repository.findByName(NAME);
+        Product result = repository.findAllByNameIn(Collections.singletonList(NAME_KUZMICH)).get(0);
+
+        // then
+        assertEquals(NAME_KUZMICH, result.getName());
+    }
+
+    @Test
+    @DisplayName("Метод findAll должен возвращать сорт без селекции")
+    void testFindAll_shouldReturnProductWithoutSelection() {
+
+        // given
+        ProductFilter filter = ProductFilter.builder().
+                selections(Collections.singletonList(null))
+                .build();
+        Pageable pageable = Pageable.unpaged();
+
+        // when
+        Page<Product> result = repository.findAll(buildSpecificationFrom(NAME_ALISA, filter), pageable);
 
         // then
         Assertions.assertAll(
-                () -> assertTrue(result.isPresent()),
-                () -> assertEquals(NAME, result.map(Product::getName).orElse(null))
+                () -> assertEquals(1, result.getContent().size()),
+                () -> assertEquals(NAME_ALISA, result.getContent().get(0).getName()),
+                () -> assertNull(result.getContent().get(0).getSelection())
         );
     }
 
@@ -206,44 +247,55 @@ public class ProductsRepositoryTest extends JpaRepositoryBasedTest {
     @Test
     @DisplayName("Метод findAll должен возвращать все Product, если все значения фильтра пустые")
     void testFindAll_shouldReturnProductsIfFilterHavaAllNulls() {
-        ProductItemFilter filter = ProductItemFilter.builder()
-                .selections(List.of(""))
+        ProductFilter filter = ProductFilter.builder()
+                .selections(Collections.emptyList())
                 .build();
         Pageable pageable = Pageable.unpaged();
 
-        Paged<Product> result = repository.findAll(filter, pageable);
+        Page<Product> result = repository.findAll(buildSpecificationFrom(null, filter), pageable);
 
-        Assertions.assertEquals(result.getContent(), products);
+        Assertions.assertAll(
+                () -> assertEquals(products.size(), result.getContent().size()),
+                () -> assertTrue(result.getContent().contains(products.get(0))),
+                () -> assertTrue(result.getContent().contains(products.get(1))),
+                () -> assertTrue(result.getContent().contains(products.get(2)))
+        );
     }
 
     //todo вынести в тест фильтра
     @Test
     @DisplayName("Метод findAll должен возвращать все Product, если список в фильтре null")
     void testFindAll_shouldReturnProductsIfFilterListIsNull() {
-        ProductItemFilter filter = ProductItemFilter.builder()
+        ProductFilter filter = ProductFilter.builder()
                 .selections(null)
                 .build();
         Pageable pageable = Pageable.unpaged();
 
-        Paged<Product> result = repository.findAll(filter, pageable);
+        Page<Product> result = repository.findAll(buildSpecificationFrom(null, filter), pageable);
 
-        Assertions.assertEquals(result.getContent(), products);
+        Assertions.assertAll(
+                () -> assertEquals(products.size(), result.getContent().size()),
+                () -> assertTrue(result.getContent().contains(products.get(0))),
+                () -> assertTrue(result.getContent().contains(products.get(1))),
+                () -> assertTrue(result.getContent().contains(products.get(2)))
+        );
     }
 
     @Test
-    void testCreate_shouldReturnProduct() {
+    @DisplayName("Метод create должен создать новый продукт, при выборке продукт должен быть найден")
+    void testCreate_shouldCreateProduct() {
 
         // given
         String name = "Ангуляй Воид Секевич";
         ProductCreateDto dto = new ProductCreateDto();
         dto.setName(name);
 
-        Product expected = repository.create(dto);
-        Product result = repository.findByName(name).orElse(null);
+        repository.create(dto);
+        Product result = repository.findAllByNameIn(Collections.singletonList(name)).get(0);
 
         Assertions.assertAll(
                 () -> assertNotNull(result),
-                () -> assertEquals(expected.getId(), result != null ? result.getId() : null)
+                () -> assertEquals(name, result.getName())
         );
     }
 }
